--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
 # Optional: OpenAI API key for LLM validation
-OPENAI_API_KEY=your_openai_api_key_here
-
+#fuepucha-hackathon test openai key
+OPENAI_API_KEY=Exampl3K3yForT3st1ngPurpos3s
 # Optional: Database configuration for production
-DATABASE_URL=your_database_url_here
+DATABASE_URL=database_url
 
-# Supabase configuration (if using Supabase)
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
