--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
@@ -19,6 +20,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@netlify/blobs": "^10.0.10",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -80,6 +82,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.1.2",
+    "prisma": "^6.15.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5"
